setup presenter and product
